# pokemon

./: .gitignore  LICENSE.md  README.md  requirements.txt  scrape.py  scrape_pokemondb.py  scrape_serebii.py  setup.cfg
scrapers/html/: pokemondb-bulbasaur.html
scrapers/jsons/: pokemondb.json
scrapers/jsons/pokemondb/: ability.json  egg_group.json  ev.json  item.json  moves.json  natures.json  pokedex.json
scrapers/scrapers/: items.py  settings.py
scrapers/scrapers/spiders/: pokemondb.py  serebii.py
