[metadata]
name = pokemon
version = 0.0.0
description = Pokemon data collection, analysis, and visualization
long_description = file: README.md
author = Broderick Turner
author_email = broderickturner92@gmail.com
url = https://github.com/unclebrod/pokemon
license = MIT
license_file = LICENSE.md
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License

[options]
python_requires = ~=3.8
packages = find:
install_requires =
    beautifulsoup4==4.10.0
    requests==2.27.1
    pandas>=1.4
    scrapy>=2.6
